examples/test/testpolicy13078.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13078
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key18: value10
      key2: value25
      key20: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value49
          key31: value9
      podSelector:
        matchLabels:
          key40: value34
          key14: value43
